v0.6.2:
    - Avoid using Mario's pipe entrance state to reload a level. This can fix potential issues with custom code that checks for Mario's animation state.
    - Moved "misc.asm" and "rom.asm" out of the "retry_config" folder, since these are not supposed to be edited by the user in 99.9% of cases.

v0.6.1:
    - Added an option for the counterbreak settings to only apply on level reload or on Overworld loading, instead of being forced for both (use values 2 and 3 for the !counterbreak_xxx settings).
    - Fixed the !title_death_behavior setting not working when using UberASMTool 2.0 (thanks to MiracleWater for reporting this).
    - Fixed the sprite status bar being glitched (and possibly other undiscovered issues...) in vanilla mode 7 boss rooms (thanks to Alex for reporting this).

v0.6.0:
    - Fixed compilation errors when using !fast_prompt = 0 (thanks to Koopster for reporting this).
    - Changed default values for !fast_transitions, !fast_prompt and !death_camera_lock in "settings.asm" to 0.
    - Fixed sfx echo not working sometimes when changing music in the middle of a level (for example with P-Switch or Starman).
    - Don't immediately respawn if falling in a pit with instant Retry if !retry_death_animation is 2 or 3.
    - Don't show prompt immediately if falling in a pit with Retry prompt if !retry_death_animation is 1 or 3.
    - Added !no_score_sprites_on_death option (disabled by default) to removed score sprites on death, to allow to use their graphic slots in SP1 for the Retry prompt tiles.
    - Fixed Yoshi swallow timer decrementing while the Retry prompt is displayed when the frame counter has specific values (only when !prompt_freeze is not 0).
    - Added api routine to save the game.
    - Added api routine to respawn in the level.